[package]
name = "spatz_indicator_controller"
version = "0.1.0"
edition = "2021"

[target.thumbv6m-none-eabi]
runner = "elf2uf2-rs -d"

[dependencies]
rp-pico = "0.7.0"
embedded-hal = "0.2.7"
panic-halt = "0.2.0"
cortex-m-rt = "0.7.2"
cortex-m = "0.7.7"
fugit = "0.3.6"
ws2812-pio = "0.6.0"
smart-leds = "0.3.0"
indicator_interface = { git = "https://github.com/teamspatzenhirn/indicator_interface.git", rev = "013d21a2c32e329e2031d64f5d5850c67966c04d" }
