[package]
name = "spatz_indicator_controller"
version = "0.1.0"
edition = "2021"

[target.thumbv6m-none-eabi]
runner = "elf2uf2-rs -d"

[dependencies]
rp-pico = "0.7.0"
rp2040-hal = { version = "*", features = ["rtic-monotonic"] }
embedded-hal = "0.2.7"
panic-halt = "0.2.0"
cortex-m-rt = "0.7.3"
cortex-m = "0.7.7"
fugit = "0.3.6"
ws2812-pio = "0.6.0"
smart-leds = "0.3.0"
indicator_interface = { path = "../indicator_interface" }
cortex-m-rtic = "1.1.4"
rp2040-monotonic = "1.2.0"
