[package]
name = "spatz_indicator_controller"
version = "0.1.0"
edition = "2021"

[target.thumbv6m-none-eabi]
runner = "elf2uf2-rs -d"

[dependencies]
rp-pico = "0.7.0"
# Is a dependency of rp-pico, this just adds rtic-monotonic feature
rp2040-hal = { version = "*", features = ["rtic-monotonic"] }
embedded-hal = "0.2.7"
panic-halt = "0.2.0"
cortex-m-rt = "0.7.3"
cortex-m = "0.7.7"
fugit = "0.3.6"
ws2812-pio = "0.6.0"
smart-leds = "0.3.0"
indicator_interface = { git = "https://github.com/teamspatzenhirn/indicator_interface.git", rev = "5a3e2c7326613f7108b9060bc1b5e0dac28e7093" }
cortex-m-rtic = "1.1.4"
heapless = "0.7.16"
rtt-target = "0.4.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
